--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "private": true,
   "scripts": {
     "prune": "rm -rf node_modules && npm run prune:sub && npm run prune:build",
-    "prune:sub": "rm -rf {projects,packages}/*/node_modules",
-    "prune:build": "rm -rf {projects,packages}/*/dist",
-    "stats:dev": "npm run start-checks && npm run dev -w projects/stats",
-    "stats:migration:create": "npm run start-checks && npm run migration:create -w projects/stats",
-    "stats:ts:noWatch": "npm run start-checks && npm run ts:noWatch -w projects/stats",
-    "stats:start": "npm run start-checks && npm run start -w projects/stats",
+    "prune:sub": "rm -rf {apps,libs}/*/node_modules",
+    "prune:build": "rm -rf {apps,libs}/*/dist",
+    "stats:dev": "npm run start-checks && npm run dev -w apps/stats",
+    "stats:migration:create": "npm run start-checks && npm run migration:create -w apps/stats",
+    "stats:ts:noWatch": "npm run start-checks && npm run ts:noWatch -w apps/stats",
+    "stats:start": "npm run start-checks && npm run start -w apps/stats",
     "repo-fix": "node helpers/eslint-helper.js --fix",
     "start-checks": "node helpers/start-checks.js && node helpers/check-package-versions.js && node helpers/modify-node-modules/index.js --check",
     "preinstall": "node helpers/modify-node-modules/index.js && npm run start-checks",
@@ -22,7 +22,7 @@
     "semver": "7.7.2"
   },
   "workspaces": [
-    "packages/*",
-    "projects/*"
+    "apps/*",
+    "libs/*"
   ]
 }
